fix: constrain product images in table to prevent overflow on products page

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -387,6 +387,12 @@ $transition-speed: 0.3s;
 
     td {
         vertical-align: middle;
+        overflow: hidden;
+    }
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
     }
 }
 
